--- a/src/prog2SO/VentInicio.form
+++ b/src/prog2SO/VentInicio.form
@@ -97,6 +97,7 @@
         <Component class="javax.swing.JButton" name="btnArchivosJugadores">
           <Properties>
             <Property name="text" type="java.lang.String" value="Cargar Archivo de Jugadores"/>
+            <Property name="name" type="java.lang.String" value="" noResource="true"/>
           </Properties>
         </Component>
       </SubComponents>
