--- a/src/InterfasGrafica/VentPartida.form
+++ b/src/InterfasGrafica/VentPartida.form
@@ -36,9 +36,11 @@
                       <Component id="btnBuscarGoogle" min="-2" max="-2" attributes="0"/>
                       <EmptySpace max="-2" attributes="0"/>
                       <Component id="txtBuscarGoogle" min="-2" pref="220" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="29" max="-2" attributes="0"/>
+                      <Component id="btnCargarImg" min="-2" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="112" max="32767" attributes="0"/>
+              <EmptySpace pref="36" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -51,6 +53,7 @@
               <Group type="103" groupAlignment="3" attributes="0">
                   <Component id="btnBuscarGoogle" alignment="3" min="-2" max="-2" attributes="0"/>
                   <Component id="txtBuscarGoogle" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Component id="btnCargarImg" alignment="3" min="-2" max="-2" attributes="0"/>
               </Group>
               <EmptySpace min="-2" pref="21" max="-2" attributes="0"/>
           </Group>
@@ -88,6 +91,14 @@
       <Properties>
         <Property name="toolTipText" type="java.lang.String" value="Buscar imagen en google"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnCargarImg">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Cargar Imagen de piedra"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCargarImgActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
