--- a/src/InterfasGrafica/VentPartida.form
+++ b/src/InterfasGrafica/VentPartida.form
@@ -43,9 +43,9 @@
                       </Group>
                       <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                          <Component id="panelPiedras" alignment="0" max="32767" attributes="0"/>
                           <Component id="panelFichasJ2" alignment="0" max="32767" attributes="0"/>
                           <Component id="panelFichasJ1" max="32767" attributes="0"/>
+                          <Component id="panelPiedras" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Component id="panelImagenes" min="-2" max="-2" attributes="0"/>
@@ -82,17 +82,25 @@
                   </Group>
               </Group>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Group type="102" attributes="0">
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace min="10" pref="10" max="-2" attributes="0"/>
                       <Component id="panelPiedras" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="47" max="32767" attributes="0"/>
-                      <Component id="panelImagenes" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                   </Group>
-                  <Group type="102" attributes="0">
-                      <Component id="lblPiedras" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                  <Group type="102" alignment="0" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="102" alignment="0" attributes="0">
+                              <EmptySpace min="0" pref="72" max="32767" attributes="0"/>
+                              <Component id="panelImagenes" min="-2" max="-2" attributes="0"/>
+                          </Group>
+                          <Group type="102" attributes="0">
+                              <Component id="lblPiedras" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
+                          </Group>
+                      </Group>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -207,17 +215,17 @@
     </Container>
     <Component class="javax.swing.JLabel" name="lblJugador1">
       <Properties>
-        <Property name="text" type="java.lang.String" value="lblJugador1"/>
+        <Property name="text" type="java.lang.String" value="Jugador1"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lblJugador2">
       <Properties>
-        <Property name="text" type="java.lang.String" value="lblJugador2"/>
+        <Property name="text" type="java.lang.String" value="Jugador2"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JLabel" name="lblPiedras">
       <Properties>
-        <Property name="text" type="java.lang.String" value="lblPiedras"/>
+        <Property name="text" type="java.lang.String" value="Piedras"/>
       </Properties>
     </Component>
     <Container class="javax.swing.JPanel" name="panelPiedras">
@@ -225,12 +233,12 @@
       <Layout>
         <DimensionLayout dim="0">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="393" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="407" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
         <DimensionLayout dim="1">
           <Group type="103" groupAlignment="0" attributes="0">
-              <EmptySpace min="0" pref="25" max="32767" attributes="0"/>
+              <EmptySpace min="0" pref="35" max="32767" attributes="0"/>
           </Group>
         </DimensionLayout>
       </Layout>
