--- a/src/InterfasGrafica/VentPartida.form
+++ b/src/InterfasGrafica/VentPartida.form
@@ -62,6 +62,7 @@
                           <Component id="btnPDC" alignment="0" max="32767" attributes="0"/>
                           <Component id="btnDescartar" alignment="0" max="32767" attributes="0"/>
                           <Component id="lblTurno" alignment="0" max="32767" attributes="0"/>
+                          <Component id="btnSF" alignment="0" max="32767" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
@@ -81,6 +82,8 @@
                               <Component id="btnPH" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnPD" min="-2" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="7" max="-2" attributes="0"/>
+                              <Component id="btnSF" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
                               <Component id="btnPDS" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -303,6 +306,15 @@
         <Property name="text" type="java.lang.String" value="Descartar ficha"/>
         <Property name="enabled" type="boolean" value="false"/>
       </Properties>
+    </Component>
+    <Component class="javax.swing.JButton" name="btnSF">
+      <Properties>
+        <Property name="text" type="java.lang.String" value="Sacar Ficha"/>
+        <Property name="enabled" type="boolean" value="false"/>
+      </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnSFActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
