--- a/src/InterfasGrafica/VentJugador.form
+++ b/src/InterfasGrafica/VentJugador.form
@@ -47,7 +47,7 @@
           <Font name="Verdana" size="24" style="0"/>
         </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Imagenes/Registrar.png"/>
+          <Image iconType="3" name="/Registrar.png"/>
         </Property>
         <Property name="toolTipText" type="java.lang.String" value=""/>
       </Properties>
