--- a/src/InterfasGrafica/VentRanking.form
+++ b/src/InterfasGrafica/VentRanking.form
@@ -137,7 +137,7 @@
         <Component class="javax.swing.JLabel" name="jLabel1">
           <Properties>
             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-              <Image iconType="3" name="/Imagenes/Ranking.png"/>
+              <Image iconType="3" name="/Ranking.png"/>
             </Property>
           </Properties>
         </Component>
